set data-theme-'light'

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -52,7 +52,7 @@
                     <button class="btn btn-primary">Expore More</button>
                 </div>
                 <div>
-                    <img src="/images/banner.png" class="max-w-sm" />
+                    <img src="images/banner.png" class="max-w-sm" />
                     <!-- Rating Badge -->
                     <div class="flex -mt-16 rounded-lg items-center gap-4 drop-shadow-lg bg-white p-5 w-60">
                         <i class="fa-solid fa-star text-3xl text-amber-400"></i>
@@ -78,7 +78,7 @@
             <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
                 <!-- first card -->
                 <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-                    <figure><img src="/images/tea-1.png"
+                    <figure><img src="images/tea-1.png"
                             alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                         <h2 class="text-2xl font-bold">Milk Tea</h2>
@@ -87,7 +87,7 @@
                 </div>
                 <!-- second card -->
                 <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-                    <figure><img src="/images/tea-2.png"
+                    <figure><img src="images/tea-2.png"
                             alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                         <h2 class="text-2xl font-bold">Milk Tea</h2>
@@ -96,7 +96,7 @@
                 </div>
                 <!-- third card -->
                 <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-                    <figure><img src="/images/tea-3.png"
+                    <figure><img src="images/tea-3.png"
                             alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                         <h2 class="text-2xl font-bold">Milk Tea</h2>
@@ -105,7 +105,7 @@
                 </div>
                 <!-- fourth card -->
                 <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-                    <figure><img src="/images/tea-4.png"
+                    <figure><img src="images/tea-4.png"
                             alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                         <h2 class="text-2xl font-bold">Milk Tea</h2>
