--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
             theme: {
                 extend: {
                     colors: {
-                        clifford: '#da373d',
+                        'gradient-start': '#FF8938',
+                        'gradient-end': '#F00',
                     }
                 }
             }
         }
     </script>
     <style>
-        .font-manrope{
+        .font-manrope {
             font-family: "Manrope", sans-serif;
         }
     </style>
@@ -40,8 +41,8 @@
 
 <body class="font-manrope">
     <header class="container mx-auto">
-        <div class="hero">
-            <div class="hero-content flex-col lg:flex-row">
+        <div class="my-20">
+            <div class="flex justify-between items-center flex-col lg:flex-row">
 
                 <div>
                     <h1 class="text-7xl font-extrabold">It's good <br>
@@ -49,10 +50,13 @@
                         Tea House</h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
-                    <button class="btn btn-primary">Expore More</button>
+                    <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">
+                        Expore More
+                        <i class="fa-solid fa-arrow-trend-up"></i>
+                    </button>
                 </div>
                 <div>
-                    <img src="images/banner.png" class="max-w-sm" />
+                    <img src="images/banner.png" class="" />
                     <!-- Rating Badge -->
                     <div class="flex -mt-16 rounded-lg items-center gap-4 drop-shadow-lg bg-white p-5 w-60">
                         <i class="fa-solid fa-star text-3xl text-amber-400"></i>
@@ -78,8 +82,7 @@
             <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
                 <!-- first card -->
                 <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-                    <figure><img src="images/tea-1.png"
-                            alt="Shoes" /></figure>
+                    <figure><img src="images/tea-1.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                         <h2 class="text-2xl font-bold">Milk Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
@@ -87,8 +90,7 @@
                 </div>
                 <!-- second card -->
                 <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-                    <figure><img src="images/tea-2.png"
-                            alt="Shoes" /></figure>
+                    <figure><img src="images/tea-2.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                         <h2 class="text-2xl font-bold">Milk Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
@@ -96,8 +98,7 @@
                 </div>
                 <!-- third card -->
                 <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-                    <figure><img src="images/tea-3.png"
-                            alt="Shoes" /></figure>
+                    <figure><img src="images/tea-3.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                         <h2 class="text-2xl font-bold">Milk Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
@@ -105,8 +106,7 @@
                 </div>
                 <!-- fourth card -->
                 <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-                    <figure><img src="images/tea-4.png"
-                            alt="Shoes" /></figure>
+                    <figure><img src="images/tea-4.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                         <h2 class="text-2xl font-bold">Milk Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
@@ -116,7 +116,7 @@
         </section>
 
         <!-- Great Tea fresh tea section -->
-        <section class="my-24 gap-12 flex flex-col lg:flex-row" >
+        <section class="my-24 gap-12 flex flex-col lg:flex-row">
             <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
                 <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
                 <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-8 py-12 flex justify-center items-center">
@@ -129,16 +129,128 @@
             </div>
             <div class="space-y-5 flex-1">
                 <h3 class="text-5xl font-extrabold">Great Tea, Freshly <br> Presented</h3>
-                <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It
+                    represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply
+                    appreciated by its custoers because of good words of mouth and unique customized service orginated
+                    from Taiwan.</p>
                 <h4 class="text-xl font-extrabold">Unique Taste</h4>
                 <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
                 <h4 class="text-xl font-extrabold mt-8">Premium Quality</h4>
                 <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
             </div>
         </section>
-    </main>
-    <footer>
+        <!-- Super Client section -->
+        <section
+            class="my-24 flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-gradient-start to-gradient-end px-16 py-24">
+            <div class="flex items-center lg:pr-28">
+                <div class="space-y-5">
+                    <h2 class="text-5xl font-extrabold text-white">Meet our Super <br> Client</h2>
+                    <p class="text-white">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even slightly
+                        believable.
+                    </p>
+                    <button class="btn btn-primary">Show All</button>
+                </div>
+            </div>
+            <!-- Review Container-->
+            <div class="relative">
+                <!-- next - review -->
+                <div class="relative z-10 mb-16 opacity-40 p-10 rounded-lg bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+                        src="images/client.png" alt="">
+                    <p>
+                        We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment
+                    </p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- Curent-review -->
+                <div class="absolute z-20 p-10 top-40 lg:-left-24 lg:w-[430px] rounded-lg bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+                        src="images/client.png" alt="">
+                    <p>
+                        We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment
+                    </p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- Previous-review -->
+                <div class=" relative z-10 opacity-40 p-10 rounded-lg bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+                        src="images/client.png" alt="">
+                    <p>
+                        We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment
+                    </p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <!-- News And Events Section -->
+        <section>
+
+        </section>
+    </main>
+    <footer class="px-4 lg:px-48 py-10 bg-base-200 text-base-content">
+        <div class="flex justify-between my-24">
+            <img src="images/cup.png" alt="">
+            <p>
+                <span>Ready to get strated?</span>
+                <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">Get strated</button>
+            </p>
+            
+        </div>
+        <div class="footer">
+            <nav>
+                <header class="footer-title">Services</header>
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+            </nav>
+            <nav>
+                <header class="footer-title">Company</header>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+            </nav>
+            <nav>
+                <header class="footer-title">Legal</header>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+            </nav>
+            <form>
+                <header class="footer-title">Newsletter</header>
+                <fieldset class="form-control w-80">
+                    <label class="label">
+                        <span class="label-text">Enter your email address</span>
+                    </label>
+                    <div class="join">
+                        <input type="text" placeholder="username@site.com" class="py-4 bg-transparent border-b-2 border-black outline-none" />
+                        <button class="btn bg-gradient-to-r rounded-full from-gradient-start to-gradient-end text-white join-item"><i class="fa-solid fa-angle-right"></i></button>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+        <div class="mt-10 text-center">
+            <p>Copyright © 2024 - All right reserved by ACME Industries Ltd</p>
+        </div>
     </footer>
 </body>
 
