complete full Projects

--- a/index.html
+++ b/index.html
@@ -201,8 +201,45 @@
         </section>
 
         <!-- News And Events Section -->
-        <section>
-
+        <section class="my-24">
+            <h2 class="text-5xl text-center font-extrabold mb-5">News & Events</h2>
+            <p class="lg:max-w-3xl text-center mb-10 mx-auto">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration in some form, by injected humour, or randomised words which don't look even slightly
+                believable.
+            </p>
+            <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                <!-- first card -->
+                <div class="card p-8 space-y-6 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="images/news-1.png" alt="Tea" /></figure>
+                    <div class=" space-y-6">
+                        <p>Feb 05, 2027</p>
+                        <h2 class="text-2xl font-bold">Collecting 8 points for discount</h2>
+                        <p>There are many variations of passages of Lorem Ipsum available</p>
+                        <button class="btn btn-outline">Learn More</button>
+                    </div>
+                </div>
+                <!-- second card -->
+                <div class="card p-8 space-y-6 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="images/news-2.png" alt="Tea" /></figure>
+                    <div class=" space-y-6">
+                        <p>Feb 05, 2027</p>
+                        <h2 class="text-2xl font-bold">Collecting 8 points for discount</h2>
+                        <p>There are many variations of passages of Lorem Ipsum available</p>
+                        <button class="btn btn-outline">Learn More</button>
+                    </div>
+                </div>
+                <!-- third card -->
+                <div class="card p-8 space-y-6 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="images/news-3.png" alt="Tea" /></figure>
+                    <div class=" space-y-6">
+                        <p>Feb 05, 2027</p>
+                        <h2 class="text-2xl font-bold">Collecting 8 points for discount</h2>
+                        <p>There are many variations of passages of Lorem Ipsum available</p>
+                        <button class="btn btn-outline">Learn More</button>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer class="px-4 lg:px-48 py-10 bg-base-200 text-base-content">
@@ -212,7 +249,7 @@
                 <span>Ready to get strated?</span>
                 <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">Get strated</button>
             </p>
-            
+
         </div>
         <div class="footer">
             <nav>
@@ -242,8 +279,11 @@
                         <span class="label-text">Enter your email address</span>
                     </label>
                     <div class="join">
-                        <input type="text" placeholder="username@site.com" class="py-4 bg-transparent border-b-2 border-black outline-none" />
-                        <button class="btn bg-gradient-to-r rounded-full from-gradient-start to-gradient-end text-white join-item"><i class="fa-solid fa-angle-right"></i></button>
+                        <input type="text" placeholder="username@site.com"
+                            class="py-4 bg-transparent border-b-2 border-black outline-none" />
+                        <button
+                            class="btn bg-gradient-to-r rounded-full from-gradient-start to-gradient-end text-white join-item"><i
+                                class="fa-solid fa-angle-right"></i></button>
                     </div>
                 </fieldset>
             </form>
